PUL-32 fixed some CSS to align the pages' style

--- a/pulsebs_frontend/src/Components/Professor/Professor_Page.css
+++ b/pulsebs_frontend/src/Components/Professor/Professor_Page.css
@@ -2,7 +2,7 @@
     background-color:#151A4F;
     color: #F6F6F6;
     min-height: 20vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -14,7 +14,7 @@
     background-color:#F6F6F6;
     color: #151A4F;
     height: 80vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
