--- a/pulsebs_frontend/src/Components/Student/Student_Page.css
+++ b/pulsebs_frontend/src/Components/Student/Student_Page.css
@@ -1,7 +1,6 @@
 .StudentHeader{
     background-color:#151A4F;
     color: #F6F6F6;
-    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -9,9 +8,29 @@
 
 }
 
-.HeaderText1{
-    color: #000;
-    background-color: #F6F6F6;
+.BookSeatContainer{
+    padding-top: 50px;
+    background-color: #F6F6F6;;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0px;
+    min-width: 98vw;
+    height: 100vh;
+}
+
+.row {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0px;
+}
+
+.TableContent{
+    color:#151A4F;
+    background-color: white;
     text-decoration: none;
 }
 
